Add linkedin and basic intro. Style fixes.

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
   <title>Karan Thakkar</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
   <link rel="stylesheet" type="text/css" href="/index.css">
 </head>
 <body>
@@ -11,7 +12,13 @@
     </div>
     <div class="home__details">
       <div class="home__details__intro">
-        Hi I'm <b>Karan Thakkar</b>
+        Hi I'm <b>Karan Thakkar</b>. 
+        I'm a Frontend Engineer at 
+        <a 
+          href="https://crowdfireapp.com" 
+          target="_blank" 
+          rel="noopener nofollow"
+        ><b>Crowdfire</b></a>.
       </div>
       <div class="home__details__social">
         <a class="home__details__social__icon"
@@ -22,6 +29,13 @@
           <i class="icon-github-alt"></i>
         </a>
         <a class="home__details__social__icon"
+          href="https://twitter.com/geekykaran" 
+          target="_blank" 
+          rel="noopener nofollow"
+        >
+          <i class="icon-twitter"></i>
+        </a>
+        <a class="home__details__social__icon"
           href="https://medium.com/@karanjthakkar" 
           target="_blank" 
           rel="noopener nofollow"
@@ -29,11 +43,11 @@
           <i class="icon-medium"></i>
         </a>
         <a class="home__details__social__icon"
-          href="https://twitter.com/geekykaran" 
+          href="https://linkedin.com/in/karanjthakkar" 
           target="_blank" 
           rel="noopener nofollow"
         >
-          <i class="icon-twitter"></i>
+          <i class="icon-linkedin"></i>
         </a>
         <a class="home__details__social__icon"
           href="https://instagram.com/geekykaran" 
@@ -47,19 +61,8 @@
           target="_blank" 
           rel="noopener nofollow"
         >
-          <i class="icon-paper-plane-o"></i>
+          <i class="icon-paper-plane"></i>
         </a>
-      </div>
-      <div class="home__details__links">
-        <div class="home__details__links__item">
-          Writing
-        </div>
-        <div class="home__details__links__item">
-          Projects
-        </div>
-        <div class="home__details__links__item">
-          Open Source
-        </div>
       </div>
     </div>
   </div>
