Add open source section

--- a/index.html
+++ b/index.html
@@ -67,15 +67,11 @@
           target="_blank" 
           rel="noopener nofollow"
         >
-          <i class="icon-paper-plane home__details__social__icon"></i>
+          <i class="icon-email home__details__social__icon"></i>
           Email
         </a>
       </div>
     </div>
-    <a href="#projects" class="next-page js-hashlink">
-      Projects
-      <i class="icon-chevron-down"></i>
-    </a>
   </div>
   <div class="projects" id="projects">
     <h1>Projects</h1>
@@ -107,10 +103,6 @@
         </p>
       </li>
     </ul>
-    <a href="#writing" class="next-page js-hashlink">
-      Writing
-      <i class="icon-chevron-down"></i>
-    </a>
   </div>
   <div class="writing" id="writing">
     <h1>Writing</h1>
@@ -129,19 +121,16 @@
         </p>
       </li>
     </ul>
-    <a href="#oss" class="next-page js-hashlink">
-      Open Source
-      <i class="icon-chevron-down"></i>
-    </a>
   </div>
   <div class="oss" id="oss">
-    <a href="#home" class="next-page js-hashlink">
-      <i class="icon-chevron-up"></i>
-      Home
-    </a>
+    <h1>Open Source</h1>
+    <ul class="repos js-repos-list">
+      
+    </ul>
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
+  <script src="index.js"></script>
   <script type="text/javascript">
     $(document).smoothScroll({
       'delegateSelector': '.js-hashlink'
