--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
         <p class="list__item__body">
           This is an iOS App built using React Native. The server code involves Twitter OAuth using PassportJS, MongoDB for session and user data storage, Express for client API's. It is deployed on an Amazon EC2 instance. The code is open source. 
           <br />
-          [<a href="https://github.com/karanjthakkar/lister-frontend">Server</a>] / [<a href="">iOS App</a>] / [<a href="https://github.com/karanjthakkar/lister-landing">Landing Page</a>]
+          [<a href="https://github.com/karanjthakkar/lister">Server</a>] / [<a href="https://github.com/karanjthakkar/lister-frontend">iOS App</a>] / [<a href="https://github.com/karanjthakkar/lister-landing">Landing Page</a>]
         </p>
       </li>
       <li class="list__item">
