Add showmyprs.com to projects

--- a/index.html
+++ b/index.html
@@ -78,8 +78,16 @@
     <ul class="list">
       <li class="list__item">
         <p class="list__item__heading">
+          <a href="https://showmyprs.com">showmyprs.com</a>: See all your Open Source contributions in one place
+        </p>
+        <p class="list__item__body">
+          This is a web app built in Go. It uses the Github API to find all your pull requests and groups them by repository. [<a href="https://github.com/karanjthakkar/showmyprs.com" target="_blank" rel="noopener nofollow">Code</a>]
+        </p>
+      </li>
+      <li class="list__item">
+        <p class="list__item__heading">
           <a href="https://github.com/karanjthakkar/npm-telegram-bot">npm-telegram-bot</a>: 🕵️ Telegram bot to search for an npm package 🔍 🙌 
-          [<a href="https://github.com/karanjthakkar/npm-telegram-bot#demo">Demo</a>]
+          [<a href="https://github.com/karanjthakkar/npm-telegram-bot#demo" target="_blank" rel="noopener nofollow">Demo</a>]
         </p>
       </li>
       <li class="list__item">
