Fix github icon name

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
           target="_blank" 
           rel="noopener nofollow"
         >
-          <i class="icon-github-alt home__details__social__icon"></i>
+          <i class="icon-github home__details__social__icon"></i>
           Github
         </a>
         <a class="home__details__social__name"
