Change copy for projects

--- a/index.html
+++ b/index.html
@@ -79,21 +79,21 @@
     <ul class="list">
       <li class="list__item">
         <p class="list__item__heading">
-          <a href="https://showmyprs.com">showmyprs.com</a>: See all your Open Source contributions in one place
+          <a href="https://showmyprs.com" target="_blank" rel="noopener nofollow">showmyprs.com</a>: See all your Open Source contributions in one place
         </p>
         <p class="list__item__body">
-          This is a web app built in Go. It uses the Github API to find all your pull requests and groups them by repository. [<a href="https://github.com/karanjthakkar/showmyprs.com" target="_blank" rel="noopener nofollow">Code</a>]
+          This is an open source web app built with Golang. It uses the Github API to find all your pull requests and groups them by repository. It was also covered on <a href="https://www.producthunt.com/posts/show-my-pr-s" target="_blank" rel="noopener nofollow">Product Hunt</a> 🎉 [<a href="https://github.com/karanjthakkar/showmyprs.com" target="_blank" rel="noopener nofollow">Code</a>]
         </p>
       </li>
       <li class="list__item">
         <p class="list__item__heading">
-          <a href="https://github.com/karanjthakkar/npm-telegram-bot">npm-telegram-bot</a>: 🕵️ Telegram bot to search for an npm package 🔍 🙌 
+          <a href="https://github.com/karanjthakkar/npm-telegram-bot" target="_blank" rel="noopener nofollow">npm-telegram-bot</a>: 🕵️ Telegram bot to search for an npm package 🔍 🙌 
           [<a href="https://github.com/karanjthakkar/npm-telegram-bot#demo" target="_blank" rel="noopener nofollow">Demo</a>]
         </p>
       </li>
       <li class="list__item">
         <p class="list__item__heading">
-          <a href="https://tweetify.io">Tweetify</a>: Twitter lists made fun
+          <a href="https://tweetify.io" target="_blank" rel="noopener nofollow">Tweetify</a>: Twitter lists made fun
         </p>
         <p class="list__item__body">
           This is an iOS App built using React Native. The server code involves Twitter OAuth using PassportJS, MongoDB for session and user data storage, Express for client API's. It is deployed on an Amazon EC2 instance. The code is open source. 
