--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <div class="home__details">
       <div class="home__details__intro">
         Hi I'm <b>Karan Thakkar</b>. 
-        I'm a Frontend Engineer at 
+        I lead the Frontend Team (Web) at
         <a 
           href="https://crowdfireapp.com" 
           target="_blank" 
