Bust cache with query params on resource

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
   <meta charset="utf-8">
   <title>Karan Thakkar</title>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css" />
-  <link rel="stylesheet" type="text/css" href="/index.css">
+  <link rel="stylesheet" type="text/css" href="/index.css?q=1">
 </head>
 <body>
   <div class="home" id="home">
@@ -139,7 +139,7 @@
   </div>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-smooth-scroll/2.1.2/jquery.smooth-scroll.min.js"></script>
-  <script src="index.js"></script>
+  <script src="index.js?q=1"></script>
   <script type="text/javascript">
     $(document).smoothScroll({
       'delegateSelector': '.js-hashlink'
