--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
   </div>
   <div class="projects" id="projects">
-    <h1>Projects</h1>
+    <h1>Projects 😎</h1>
     <ul class="list">
       <li class="list__item">
         <p class="list__item__heading">
@@ -114,7 +114,7 @@
     </ul>
   </div>
   <div class="writing" id="writing">
-    <h1>Writing</h1>
+    <h1>Writing ✍🏻</h1>
     <ul class="list">
       <li class="list__item">
         <p class="list__item__heading">
@@ -132,7 +132,7 @@
     </ul>
   </div>
   <div class="oss" id="oss">
-    <h1>Open Source</h1>
+    <h1>Open Source 🤗</h1>
     <ul class="repos js-repos-list">
       
     </ul>
